--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -19,3 +19,45 @@ $up1280: "only screen and (min-width: 1280px))";
     font-weight: normal;
     font-style: normal;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-20px);
+        transform: translateY(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0)
+    }
+}
+
+
+@mixin fadeIn {
+	animation-name: fadeIn;
+	animation-duration: 2s;
+}
+
+@mixin fadeInFaster {
+	animation-name: fadeIn;
+	animation-duration: 1s;
+}
+
+@keyframes stretchText{
+  0% {
+    letter-spacing: 0rem;
+    opacity: 0;
+  }
+
+  100% {
+    letter-spacing: 0.6rem;
+    opacity: 1;
+  }
+}
+
+@mixin stretchText {
+	animation-name: stretchText;
+	animation-duration: 2s;
+}
