--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-html, body, h1, h2 {
+* {
 	margin: 0;
 	padding: 0;
 }
@@ -108,6 +108,9 @@ main {
 .main__aboutus{
 	width: 90%;
 	margin: 0 auto;
+	@media #{$low768}{
+		text-align: center;
+	}
 
 		img {
 			float: left;
@@ -119,21 +122,46 @@ main {
 			filter: gray; /* IE6-9 */
 			-webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
 			filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+			@media #{$up769WithMax}{
+				margin: 10px 20px;
+			}
+			@media #{$low768}{
+				float: inherit;
+				width: 100%;
+				max-width: 250px;
+				height: auto;
+				margin: 30px auto 20px;
+			}
 		}
 
 		div {
 			height: auto;
 			overflow: auto;
+			@media #{$up769WithMax}{
+				overflow: inherit;
+			}
+
+			@media #{$low768} {
+				width: 100%;
+			}
+
 
 			h3 {
 				font-variant: small-caps;
 				text-align: left;
-				margin: 50px auto 10px;
+				margin: 60px auto 10px;
+				@media #{$low768} {
+					text-align: center;
+					margin: 0;
+				}
 			}
 
 			p {
 				text-align: left;
 				width: 90%;
+				@media #{$low768} {
+					text-align: center;
+				}
 			}
 
 			.caption {
@@ -141,6 +169,28 @@ main {
 				padding-bottom: 5px;
 			}
 		}
+};
+
+.main__repertoire {
+	width: 90%;
+	margin: 0 auto;
+	ul {
+	  list-style: none;
+	  margin-left: 0;
+	  padding-left: 0;
+	}
+
+	li {
+	 padding-left: 1em;
+	 padding-top: 1em;
+	  text-indent: -1em;
+	  @include fadeInFaster;
+	
+		&:before {
+		  content: "♪";
+		  padding-right: 7px;
+		}
+	}
 }
 
 .mainpage{
@@ -222,9 +272,8 @@ nav {
 	a:hover {
 		text-decoration: none;
 	}
-}
 
-ul {
+	ul {
 	list-style: none;
 	text-transform: uppercase;
 	text-align: center;
@@ -254,6 +303,8 @@ ul {
 		width: 60%;
 	}
 }
+}
+
 
 a {
 	text-decoration: none;
@@ -299,11 +350,10 @@ a {
 
 		&:hover {
 			background-image: url("../img/youtube-hover.png");
+		}
 	}
 }
 
-
-}
 
 //Contact form//
 
@@ -375,29 +425,31 @@ input, textarea {
 	}	
 }
 
-.dropdown {
-	@media #{$low768}{
+@media #{$low768}{
+	.dropdown {
 		display: none;
+		@include showDropdown;
 
-		& +	.activateDropdown {
-			animation-name: showDropdown;
-			animation-duration: 5s;
+		ul {
+			margin: 0 auto;
 		}
 	}
 }
 
+
 .navbar-toggle {
 	border: 0;
 	background: none;
-	color: $color-text;
 
-	span {
-		font-size: 22pt;
-		padding: 5px 10px;
-		margin: 10px;
+	div {
+		width: 35px;
+		height: 5px;
+		background-color: $color-text;
+		margin: 6px 0;
 	}
-	&:hover {
-		color: $color-link;
+
+	&:hover div {
+		background-color: $color-link;
 	}
 
 	@media #{$up769}{
