Changes with RWD

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -6,6 +6,7 @@ $logo_font: 'carolina_mountains_personalRg';
 $extra_font: 'Arimo', sans-serif;
 $main_font: 'Ledger', serif;
 
+$low545: "only screen and (max-width: 545px)";
 $low768: "only screen and (max-width: 768px)";
 $up769: "only screen and (min-width: 769px)";
 $up769WithMax: "only screen and (min-width: 769px) and (max-width: 1023px)";
