--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,6 +97,11 @@ main {
   background-position: left center;
   z-index: 1;
   width: 100%; }
+  @media only screen and (max-width: 768px) {
+    main {
+      padding: 10px;
+      padding-bottom: 80px;
+      width: 100%; } }
   @media only screen and (min-width: 769px) {
     main {
       animation-name: fadeIn;
@@ -107,6 +112,9 @@ main {
     margin: 5px auto;
     animation-name: fadeIn;
     animation-duration: 1s; }
+    @media only screen and (max-width: 768px) {
+      main p {
+        width: 100%; } }
   main .main__cover {
     background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
@@ -128,7 +136,8 @@ main {
   margin: 0 auto; }
   @media only screen and (max-width: 768px) {
     .main__aboutus {
-      text-align: center; } }
+      text-align: center;
+      width: 100%; } }
   .main__aboutus img {
     float: left;
     width: 200px;
@@ -148,7 +157,6 @@ main {
     @media only screen and (max-width: 768px) {
       .main__aboutus img {
         float: inherit;
-        width: 100%;
         max-width: 250px;
         height: auto;
         margin: 30px auto 20px; } }
@@ -182,6 +190,9 @@ main {
 .main__repertoire {
   width: 90%;
   margin: 0 auto; }
+  @media only screen and (max-width: 768px) {
+    .main__repertoire {
+      width: 100%; } }
   .main__repertoire ul {
     list-style: none;
     margin-left: 0;
@@ -213,6 +224,9 @@ main {
     text-align: center;
     animation-name: fadeIn;
     animation-duration: 2s; }
+    @media only screen and (max-width: 545px) {
+      .mainpage h1 {
+        font-size: 42pt; } }
   .mainpage h2 {
     font-family: 'Arial', sans-serif;
     text-transform: uppercase;
@@ -221,11 +235,19 @@ main {
     font-size: 12pt;
     text-align: center;
     text-shadow: 1px 1px 2px #2a262d;
-    margin-top: -10px;
-    animation-name: stretchText;
-    animation-duration: 2s; }
+    margin-top: -10px; }
+    @media only screen and (min-width: 769px) {
+      .mainpage h2 {
+        animation-name: stretchText;
+        animation-duration: 2s; } }
+    @media only screen and (max-width: 545px) {
+      .mainpage h2 {
+        font-size: 11pt; } }
     .mainpage h2::before, .mainpage h2::after {
       content: " - "; }
+      @media only screen and (max-width: 545px) {
+        .mainpage h2::before, .mainpage h2::after {
+          content: none; } }
 
 aside {
   box-sizing: border-box;
@@ -362,12 +384,13 @@ input, textarea {
 
 @media only screen and (max-width: 768px) {
   .head {
-    padding: 30px;
+    padding: 20px;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-around;
     align-items: flex-start; }
     .head h1 {
-      font-size: 7vw;
+      font-size: 26pt;
       margin: 0; } }
 
 @media only screen and (max-width: 768px) {
@@ -387,6 +410,8 @@ input, textarea {
     background-color: #5f5964;
     margin: 6px 0; }
   .navbar-toggle:hover div {
+    -webkit-transition: background-color 0.2s;
+    transition: background-color 0.2s;
     background-color: #a593e0; }
   @media only screen and (min-width: 769px) {
     .navbar-toggle {
