--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,6 +73,11 @@ main {
 	background-position: left center;
 	z-index: 1;
 	width: 100%;
+	@media #{$low768}{
+		padding: 10px;
+		padding-bottom: 80px;
+		width: 100%;
+	}
 	@media #{$up769}{
 		@include fadeInFaster;
 	}
@@ -82,6 +87,9 @@ main {
 		text-align: center;
 		margin: 5px auto;
 		@include fadeInFaster;
+		@media #{$low768}{
+			width: 100%;
+		}
 	}
 
 	.main__cover {
@@ -110,6 +118,7 @@ main {
 	margin: 0 auto;
 	@media #{$low768}{
 		text-align: center;
+		width: 100%;
 	}
 
 		img {
@@ -127,7 +136,6 @@ main {
 			}
 			@media #{$low768}{
 				float: inherit;
-				width: 100%;
 				max-width: 250px;
 				height: auto;
 				margin: 30px auto 20px;
@@ -174,6 +182,11 @@ main {
 .main__repertoire {
 	width: 90%;
 	margin: 0 auto;
+
+	@media #{$low768}{
+		width: 100%;
+	}
+
 	ul {
 	  list-style: none;
 	  margin-left: 0;
@@ -210,6 +223,10 @@ main {
 		text-shadow: 0px 0px 2px #2a262d, 0 0 2em #2a262d, 0 0 0.2em #2a262d;
 		text-align: center;
 		@include fadeIn;
+
+		@media #{$low545}{
+			font-size: 42pt;
+		}
 	}
 
 	h2 {
@@ -221,11 +238,20 @@ main {
 		text-align: center;
 		text-shadow: 1px 1px 2px #2a262d;
 		margin-top: -10px;
-		@include stretchText;
+		@media #{$up769}{
+			@include stretchText;
+		}
 
+		@media #{$low545}{
+			font-size: 11pt;
+		}
 
 		&::before, &::after {
-			content: " - "
+			content: " - ";
+
+			@media #{$low545}{
+				content: none;
+			}
 		}
 	}
 }
@@ -413,14 +439,15 @@ input, textarea {
 
 .head {
 	@media #{$low768}{
-		padding: 30px;
+		padding: 20px;
+		box-sizing: border-box;
 		display: flex; 
 		justify-content: space-around;
 		align-items: flex-start;
-	h1 {
-		font-size: 7vw;
-		margin: 0;
-		// line-height: 0;
+
+		h1 {
+			font-size: 26pt;
+			margin: 0;
 		}
 	}	
 }
@@ -449,6 +476,8 @@ input, textarea {
 	}
 
 	&:hover div {
+		-webkit-transition: background-color 0.2s; 
+		transition: background-color 0.2s;
 		background-color: $color-link;
 	}
 
