--- a/src/css/style.css
+++ b/src/css/style.css
@@ -216,7 +216,8 @@ main {
   width: 100%; }
   @media only screen and (max-width: 768px) {
     .mainpage {
-      margin-top: 0; } }
+      margin-top: -100px;
+      flex: 1; } }
   .mainpage h1 {
     color: #ffffff;
     font-size: 72pt;
@@ -416,3 +417,67 @@ input, textarea {
   @media only screen and (min-width: 769px) {
     .navbar-toggle {
       display: none; } }
+
+.youtube-player {
+  position: relative;
+  padding-bottom: 56.23%;
+  /* Use 75% for 4:3 videos */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  background: #000;
+  margin: 5px; }
+
+.youtube-player iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: transparent; }
+
+.youtube-player img {
+  bottom: 0;
+  display: block;
+  left: 0;
+  margin: auto;
+  max-width: 100%;
+  width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: none;
+  height: auto;
+  cursor: pointer;
+  -webkit-transition: .4s all;
+  -moz-transition: .4s all;
+  transition: .4s all; }
+
+.youtube-player img:hover {
+  -webkit-filter: brightness(75%); }
+
+.youtube-player .play {
+  height: 72px;
+  width: 72px;
+  left: 50%;
+  top: 50%;
+  margin-left: -36px;
+  margin-top: -36px;
+  position: absolute;
+  background: url("http://i.imgur.com/TxzC70f.png") no-repeat;
+  cursor: pointer; }
+
+.movie {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 550px; }
+
+.thumbnails {
+  display: flex;
+  justify-content: center; }
+  .thumbnails div {
+    flex: 1;
+    padding-bottom: 18%; }
+  .thumbnails .play {
+    display: none; }
