--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,7 +36,7 @@ h2 {
 	margin: 20px;
 }
 
-.nowrap{
+.nowrap {
 	white-space: nowrap;
 }
 
@@ -215,8 +215,9 @@ main {
 	margin-top: -120px;
 	width: 100%;
 	@media #{$low768}{
-		margin-top: -100px;
+		margin-top: 0;
 		flex: 1;
+		z-index: -1;
 	}
 
 	h1 {
