--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,7 +63,9 @@ h2 {
   text-transform: uppercase;
   text-align: center;
   color: #5f5964;
-  margin: 20px; }
+  margin: 20px;
+  animation-name: fadeIn;
+  animation-duration: 1s; }
 
 .nowrap {
   white-space: nowrap; }
@@ -95,17 +97,13 @@ main {
   padding: 40px;
   background-size: cover;
   background-position: left center;
-  z-index: 1;
   width: 100%; }
   @media only screen and (max-width: 768px) {
     main {
       padding: 10px;
       padding-bottom: 80px;
-      width: 100%; } }
-  @media only screen and (min-width: 769px) {
-    main {
-      animation-name: fadeIn;
-      animation-duration: 1s; } }
+      width: 100%;
+      flex: 1; } }
   main p {
     width: 80%;
     text-align: center;
@@ -115,17 +113,9 @@ main {
     @media only screen and (max-width: 768px) {
       main p {
         width: 100%; } }
-  main .main__cover {
-    background-color: rgba(255, 255, 255, 0.9);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -2; }
 
 .sidepage {
-  background-image: url("../img/background-sub.jpg");
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/background-sub.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -150,7 +140,9 @@ main {
     -webkit-filter: grayscale(1);
     /* Google Chrome, Safari 6+ & Opera 15+ */
     filter: grayscale(1);
-    /* Microsoft Edge and Firefox 35+ */ }
+    /* Microsoft Edge and Firefox 35+ */
+    animation-name: fadeIn;
+    animation-duration: 1s; }
     @media only screen and (min-width: 769px) and (max-width: 1023px) {
       .main__aboutus img {
         margin: 10px 20px; } }
@@ -172,7 +164,9 @@ main {
     .main__aboutus div h3 {
       font-variant: small-caps;
       text-align: left;
-      margin: 60px auto 10px; }
+      margin: 60px auto 10px;
+      animation-name: fadeIn;
+      animation-duration: 1s; }
       @media only screen and (max-width: 768px) {
         .main__aboutus div h3 {
           text-align: center;
@@ -196,7 +190,9 @@ main {
   .main__repertoire ul {
     list-style: none;
     margin-left: 0;
-    padding-left: 0; }
+    padding-left: 0;
+    width: 90%;
+    margin: 0 auto; }
   .main__repertoire li {
     padding-left: 1em;
     padding-top: 1em;
@@ -350,7 +346,9 @@ a {
       background-image: url("../img/youtube-hover.png"); }
 
 form {
-  text-align: center; }
+  text-align: center;
+  animation-name: fadeIn;
+  animation-duration: 1s; }
 
 #contact {
   width: 80%;
